--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,14 @@
         <label for="desc_1" ><h3 align=center>Enter your choice : </h3></label>
         <p align=center>
         <input type="number" id="choice" name="choice" placeholder="enter your choice"> 
-        <input type="submit" id="submit_choice" value="Submit">
+        <input type="submit" id="submit_choice" value="Submit"> <br> 
+        </p>
+    </form>
+
+    <form action="/clean" method="post">
+        <hr>
+        <p align=center>
+            <input type="submit" id="submit_choice" value="clean database"> <br> 
         </p>
     </form>
 
